# multithread_stream_example

./: .gitignore  CMakeLists.txt  README.md
include/: pipeline.h  threadsafequeue.h  threadsafequeue.tpp
src/: main.cpp  pipeline.cpp
src/pipeline/: CMakeLists.txt  pipeline.cpp
src/pipeline/include/pipeline/: pipeline.h  threadsafequeue.h  threadsafequeue.tpp
tests/: CMakeLists.txt  filter_mock.h  pipeline_test.cpp
